objects/ASI_eForm_Tuition__c.object
<CustomObject>
    <description>School Expense of Employee&apos;s Child</description>
    <fields>
        <fullName>ASI_eForm_Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Beneficiary__c</fullName>
        <description>Beneficiary</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_First_Name__c + &apos; &apos; +  ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beneficiary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KRW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Company__c</fullName>
        <description>Requester Company</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Company_Name_MDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Department__c</fullName>
        <description>Requester Department</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_MDM_Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_ID__c</fullName>
        <description>Requester Employee No.</description>
        <formula>ASI_eForm_Requester_Record__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Name__c</fullName>
        <description>Requester Name</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_First_Name__c +&apos; &apos;+ ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester ID</label>
        <referenceTo>ASI_eForm_HR_MDM__c</referenceTo>
        <relationshipLabel>Children Tuition Expenses</relationshipLabel>
        <relationshipName>Children_Tuition_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Title__c</fullName>
        <description>Requester Title</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Job_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting for Finance Verification</fullName>
                </value>
                <value>
                    <fullName>Finance Verified</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sync_to_JDE_Date_c__c</fullName>
        <description>Sync to JDE</description>
        <label>Sync to JDE date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Total_Fee__c</fullName>
        <label>Total Tuition Subsidy</label>
        <summarizedField>ASI_eForm_Tuition_Detail__c.ASI_eForm_Fee__c</summarizedField>
        <summaryForeignKey>ASI_eForm_Tuition_Detail__c.ASI_eForm_Tuition__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Children Tuition Expense</label>
    <listViews>
        <fullName>ASI_eHR_KOR_CT_Approved</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Total_Fee__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Sync_to_JDE_Date_c__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Tuition__c.ASI_eForm_KR_Children_Expense</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>eHR_KOR_CT_Approved</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_CT_Draft</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Total_Fee__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Sync_to_JDE_Date_c__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Tuition__c.ASI_eForm_KR_Children_Expense</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>eHR_KOR_CT_Draft</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_CT_Rejected</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Total_Fee__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Sync_to_JDE_Date_c__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Tuition__c.ASI_eForm_KR_Children_Expense</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>eHR_KOR_CT_Rejected</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_CT_Submitted</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Total_Fee__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Sync_to_JDE_Date_c__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Tuition__c.ASI_eForm_KR_Children_Expense</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>eHR_KOR_CT_Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Total_Fee__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Sync_to_JDE_Date_c__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Children Tuition Expense Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children Tuition Expenses</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_Children_Expense</fullName>
        <active>true</active>
        <description>KR Children School Expense</description>
        <label>KR Children School Expense</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>